spacing fix

--- a/templates/css/mobile.scss
+++ b/templates/css/mobile.scss
@@ -112,9 +112,12 @@
     margin: 24px 0;
     padding: 10px;
   }
-
   .sky {
     padding-bottom: 1em 1em 4em;
+  }
+  #reasons .node,
+  #reasons .ruby {
+    margin-bottom: 1.3em;
   }
   .home-hero {
     .main-message {
